# audio-share-linux-gtk

./: .gitignore  Cargo.toml  README.md  com.github.subrighteous.audiosharegtk.json  com.github.subrighteous.audiosharegtk.json~  com.subrighteous.audiosharegtk.json  meson.build  meson_options.txt
data/: com.github.subrighteous.audiosharegtk.desktop.in  com.github.subrighteous.audiosharegtk.gschema.xml  com.github.subrighteous.audiosharegtk.metainfo.xml.in  com.github.subrighteous.audiosharegtk.service.in  com.subrighteous.audiosharegtk.desktop.in  com.subrighteous.audiosharegtk.gschema.xml  com.subrighteous.audiosharegtk.metainfo.xml.in  com.subrighteous.audiosharegtk.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  audiosharegtk.pot  meson.build
src/: application.rs  apputils.rs  audioshare.rs  audiosharegtk.gresource.xml  config.rs  configfile.rs  main.rs  meson.build  preferences_dialog.ui  shortcuts-dialog.ui  window.rs  window.ui
