[package]
name = "audiosharegtk"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
once_cell = "1.21"
ashpd = { version = "0.11", features = ["glib", "gtk4", "wayland"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = "4.5.41"
get_if_addrs = "0.5.3"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_7"]
